@@ -4,9 +4,12 @@ export(extract_areas)
 export(extract_metadata)
 export(extract_tables)
 export(extract_text)
+export(get_n_pages)
 export(get_page_dims)
 export(locate_areas)
 export(make_thumbnails)
+export(merge_pdfs)
+export(split_pdf)
 import(tabulizerjars)
 importFrom(grDevices,dev.capabilities)
 importFrom(grDevices,dev.off)
@@ -16,7 +19,6 @@ importFrom(graphics,plot)
 importFrom(graphics,rasterImage)
 importFrom(png,readPNG)
 importFrom(rJava,.jfloat)
-importFrom(rJava,.jpackage)
 importFrom(rJava,J)
 importFrom(rJava,new)
 importFrom(tools,file_path_sans_ext)
