@@ -1,30 +1,36 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/get_page_dims.R
 \name{get_page_dims}
+\alias{get_n_pages}
 \alias{get_page_dims}
-\title{get_page_dims}
+\title{Page length and dimensions}
 \usage{
 get_page_dims(file, pages = NULL)
+
+get_n_pages(doc, file)
 }
 \arguments{
 \item{file}{A character string specifying the path or URL to a PDF file.}
 
 \item{pages}{An optional integer vector specifying pages to extract from.}
+
+\item{doc}{Optionally, an rJava reference to a PDDocument Java object.}
 }
 \value{
-A list of two-element numeric vectors specifying the width and height of each page, respectively.
+For \code{get_n_pages}, an integer. For \code{get_page_dims}, a list of two-element numeric vectors specifying the width and height of each page, respectively.
 }
 \description{
-Get Page Dimensions
+Get Page Length and Dimensions
 }
 \details{
-This function extracts the dimensions of pages in a PDF document. This can be useful for figuring out how to specify the \code{area} argument in \code{\link{extract_tables}}
+\code{get_n_pages} returns the page length of a PDF document. \code{get_page_dims} extracts the dimensions of specified pages in a PDF document. This can be useful for figuring out how to specify the \code{area} argument in \code{\link{extract_tables}}
 }
 \examples{
 \dontrun{
 # simple demo file
 f <- system.file("examples", "data.pdf", package = "tabulizer")
 
+get_n_pages(file = f)
 get_page_dims(f)
 }
 }
